--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -5,10 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    <!-- <style>
+      div {
+        background-color: red;
+        text-align: center;
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+      }
+
+      p {
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
+
+      button {
+        background-color: orange;
+        font-size: 18px;
+      }
+    </style> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <div style="background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 32px;
+    font-weight: bold;">Style me via the external method!</div>
+    <p style="  background-color: green;
+    color: white;
+    font-size: 18px;">I would like to be styled with the internal method, please.</p>
+    <button style="background-color: orange;
+  font-size: 18px;">Inline Method</button>
   </body>
 </html>
